[Chore #160925459] Fix validations
